[package]
name = "novaflow"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
regex = "1.11.1"
reqwest = "0.12.9"
rt = "0.14.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
sync = "0.1.0"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.4"

