[package]
name = "novaflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
json-subscriber = "0.2.4"
regex = "1.11.1"
reqwest = "0.12.9"
rt = "0.14.0"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
sync = "0.1.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v7"] }
openssl = { version = "0.10", features = ["vendored"] }